--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-spring.application.name=Social_Network
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Social_Network?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123abc@A
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.storage_engine=innodb
+#spring.application.name=Social_Network
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/Social_Network?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=123abc@A
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.storage_engine=innodb
 
 #spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:mysql://10.2.22.63:3306/social?allowPublicKeyRetrieval=true&useSSL=False
-#spring.datasource.username=anhvty
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-#spring.datasource.password=12345678
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://10.2.22.63:3306/Social_Network?allowPublicKeyRetrieval=true&useSSL=False
+spring.datasource.username=anhvty
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.password=12345678
+ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 server.port=1234
 
@@ -23,13 +23,13 @@ spring.jpa.properties.hibernate.format_sql=true
 #keycloack
 keycloak.realm=master
 
-idp.client-secret=YL4yO6IkR4GKIZyNlTZtbrJp6vZjEycU
+idp.client-secret=LV0R1Q6dWy1g5x5ekKQSPrKADgev6Vwt
 idp.url=http://localhost:8080
 keycloak.auth-server-url=http://localhost:8080
 idp.client-id = SocialNetwork-BE
 
 spring.security.oauth2.client.registration.keycloak.client-id=SocialNetwork
-spring.security.oauth2.client.registration.keycloak.client-secret=YL4yO6IkR4GKIZyNlTZtbrJp6vZjEycU
+spring.security.oauth2.client.registration.keycloak.client-secret=LV0R1Q6dWy1g5x5ekKQSPrKADgev6Vwt
 #spring.security.oauth2.client.registration.keycloak.client-secret=JGTeO7TP8vrubBI6z1iDPfKCinzHCqFh
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
