--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.properties.hibernate.storage_engine=innodb
 
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://10.2.22.63:3306/Social_Network?allowPublicKeyRetrieval=true&useSSL=False
 spring.datasource.username=anhvty
